echo env, not cat...

--- a/circle.yml
+++ b/circle.yml
@@ -42,9 +42,7 @@ deployment:
   appengine:
     branch: alpha
     commands:
-      - touch ~/.appcfg_oauth2_tokens_java
-      - chmod +rw ~/.appcfg_oauth2_tokens_java
-      - cat $APPENGINE_OUTH_FILE > ~/.appcfg_oauth2_tokens_java
+      - echo $APPENGINE_OUTH_FILE > ~/.appcfg_oauth2_tokens_java
       - ./gradlew appengineUpdate
       #- echo $APPENGINE_TOKEN | $HOME/appengine-java-sdk-1.9.26/bin/appcfg.sh --passin update  .
       - git config --global user.email "builds@circleci.com"
