timeout syntax error...

--- a/circle.yml
+++ b/circle.yml
@@ -43,8 +43,8 @@ deployment:
     branch: alpha
     commands:
       - echo $APPENGINE_OUTH_FILE > ~/.appcfg_oauth2_tokens_java
-      - ./gradlew appengineUpdate:
-        timeout: 1200
+      - (./gradlew appengineUpdate):
+          timeout: 1200
       #- echo $APPENGINE_TOKEN | $HOME/appengine-java-sdk-1.9.26/bin/appcfg.sh --passin update  .
       - git config --global user.email "builds@circleci.com"
       - git config --global user.name "Circle CI"
