new appengine sdk

--- a/circle.yml
+++ b/circle.yml
@@ -43,7 +43,7 @@ deployment:
     branch: alpha
     commands:
       - echo $APPENGINE_OUTH_FILE > ~/.appcfg_oauth2_tokens_java
-      - ./gradlew appengineUpdate
+      - echo $APPENGINE_TOKEN | ./gradlew appengineUpdate
       #- echo $APPENGINE_TOKEN | $HOME/appengine-java-sdk-1.9.26/bin/appcfg.sh update  .
       - git config --global user.email "builds@circleci.com"
       - git config --global user.name "Circle CI"
