--- a/circle.yml
+++ b/circle.yml
@@ -42,7 +42,7 @@ deployment:
   appengine:
     branch: alpha
     commands:
-      - echo $APPENGINE_OUTH_FILE > ~/.appcfg_oauth2_tokens_java
+      #- echo $APPENGINE_OUTH_FILE > ~/.appcfg_oauth2_tokens_java
       - echo $APPENGINE_TOKEN | ./gradlew appengineUpdate
       #- echo $APPENGINE_TOKEN | $HOME/appengine-java-sdk-1.9.26/bin/appcfg.sh update  .
       - git config --global user.email "builds@circleci.com"
