--- a/circle.yml
+++ b/circle.yml
@@ -25,7 +25,7 @@ test:
     #   parallel: true
     #   timeout: 1200
   override:
-    - case $CIRCLE_NODE_INDEX in 0) ./gradlew app:testRelease ;; 1) backend:test -PdisablePreDex ;; esac:
+    - case $CIRCLE_NODE_INDEX in 0) ./gradlew app:testRelease ;; 1) ./gradlew backend:test -PdisablePreDex ;; esac:
         parallel: true
     - case $CIRCLE_NODE_INDEX in 2) circle-android wait-for-boot ;; esac:
         parallel: true
