--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ dependencies:
 test:
   pre:
     - chmod +x gradlew
-    - case emulator -avd circleci-android21 -no-audio -no-window:
+    - emulator -avd circleci-android21 -no-audio -no-window:
         background: true
     - ./gradlew increaseVersionCode incrementVersionNumber
     #- (./gradlew assembleRelease -PdisablePreDex):
