checkout master isntead of creating it laol

--- a/circle.yml
+++ b/circle.yml
@@ -42,7 +42,7 @@ deployment:
       - git config --global user.email "builds@circleci.com"
       - git config --global user.name "Circle CI"
       - git commit -am "Update version number and codes for automatic deploy."
-      - git branch master
+      - git checkout master
       - git pull master
       - git merge alpha
       - git push https://$GIT_CREDS@github.com/tokko/Recipesv2.git HEAD:master
