--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 
 task('incrementVersionNumber') << {
     def appenginewebxml = file('/src/main/webapp/WEB-INF/appengine-web.xml')
-    if (appenginewebxml.canRead()) {
+    //  if (appenginewebxml.canRead()) {
         def xml = appenginewebxml.getText()
         def matcher = Pattern.compile('<version>v(\\d+)').matcher(xml)
         matcher.find()
@@ -61,7 +61,7 @@ task('incrementVersionNumber') << {
         m2.find()
         code = m2.replaceAll('API_VERSION = "v' + newVersion + '"')
         constantsFile.write(code)
-    }
+    //  }
 }
 tasks.whenTaskAdded { task ->
     if (task.name == 'appengineUpdate') {
