--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
     buildToolsVersion "22.0.1"
 
     task('increaseVersionCode') << {
-        def manifestFile = file(getRootDir() + "/backend/src/main/AndroidManifest.xml")
+        def manifestFile = file("src/main/AndroidManifest.xml")
         def pattern = Pattern.compile("versionCode=\"(\\d+)\"")
         def patternVersionNumber = Pattern.compile("versionName=\"(\\d+)\\.(\\d+)\\.(\\d+)\\.(\\d+)\"")
         def manifestText = manifestFile.getText()
