--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,7 +83,8 @@
         </activity>
         <activity
             android:name=".shoppinglist.ShoppingListActivity"
-            android:label="@string/title_activity_shopping_list"></activity>
+            android:label="@string/title_activity_shopping_list"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
