--- a/circle.yml
+++ b/circle.yml
@@ -15,8 +15,9 @@ test:
     - chmod +x gradlew
     - chmod +rw ./backend/src/main/webapp/WEB-INF/appengine-web.xml
     - chmod +rw ./app/src/main/AndroidManifest.xml
-    - emulator -avd circleci-android21 -no-audio -no-window:
+    - case $CIRCLE_NODE_INDEX in 1) emulator -avd circleci-android21 -no-audio -no-window ;; esac:
         background: true
+        parallel: true
     - ./gradlew increaseVersionCode incrementVersionNumber
     #- (./gradlew assembleRelease -PdisablePreDex):
     #    parallel: true
@@ -25,13 +26,19 @@ test:
     #   parallel: true
     #   timeout: 1200
   override:
-    - ./gradlew app:testRelease backend:test -PdisablePreDex
-    - circle-android wait-for-boot
-    - ./gradlew connectedAndroidTestDebug -PdisablePreDex:
+    - case $CIRCLE_NODE_INDEX in 0) ./gradlew app:testRelease backend:test -PdisablePreDex ;; esac:
+        parallel: true
+    - case $CIRCLE_NODE_INDEX in 1) circle-android wait-for-boot ;; esac:
+        parallel: true
+    - case $CIRCLE_NODE_INDEX in 1) ./gradlew connectedAndroidTestDebug -PdisablePreDex ;; esac:
+        parallel: true
         timeout: 1200
-    - cp -r app/build/reports/tests/release/classes/* $CIRCLE_TEST_REPORTS
-    - cp -r app/build/reports/androidTests/connected/* $CIRCLE_TEST_REPORTS
-    - cp -r backend/build/reports/tests/classes/* $CIRCLE_TEST_REPORTS
+    - case $CIRCLE_NODE_INDEX in 0) cp -r backend/build/reports/tests/classes/* $CIRCLE_TEST_REPORTS ;; esac:
+        parallel: true
+    - case $CIRCLE_NODE_INDEX in 0) cp -r app/build/reports/tests/release/classes/* $CIRCLE_TEST_REPORTS ;; esac:
+        parallel: true
+    - case $CIRCLE_NODE_INDEX in 1) cp -r app/build/reports/androidTests/connected/* $CIRCLE_TEST_REPORTS ;; esac:
+        parallel: true
 
 deployment:
   appengine:
