--- a/circle.yml
+++ b/circle.yml
@@ -41,11 +41,11 @@ deployment:
   appengine:
     branch: alpha
     commands:
-#      - erb .appcfg_oauth2_tokens_java.json > ~/.appcfg_oauth2_tokens_java
- #     - ./gradlew appengineUpdate
- #     - ./gradlew publishRelease
+      - erb .appcfg_oauth2_tokens_java.json > ~/.appcfg_oauth2_tokens_java
+      - ./gradlew appengineUpdate
+      - ./gradlew publishRelease
       - git config --global user.email "builds@circleci.com"
       - git config --global user.name "Circle CI"
       - git commit -am "Update version number and codes for automatic deploy."
       - git push https://$GIT_CREDS@github.com/tokko/Recipesv2.git HEAD:alpha-circleci
-      - git request-pull master https://$GIT_CREDS@github.com/tokko/Recipesv2.git alpha-circleci
+ #     - git request-pull master https://$GIT_CREDS@github.com/tokko/Recipesv2.git alpha-circleci
